--- a/style.css
+++ b/style.css
@@ -165,14 +165,13 @@ input::placeholder{
         max-width: 100%;
         max-height: 100vh;
     }
-    .logo img{
-        margin-top: 80px;
-        margin-bottom: 30px;
+    .logo{
+        margin-top: 7%;
     }
     .wrapper{
         max-width: 60%;
         min-width: 60%;
-        max-height: 55vh;
+        max-height: 350px;
         display: flex;
         flex-direction: row;
         border-radius: 1em;
@@ -215,6 +214,11 @@ input::placeholder{
         color: hsl(183, 100%, 15%);
         font-family: 'Space Mono', monospace;
     }
+    .down-right button{
+        margin-top: 24%;
+    
+    }
+    
     
   }
 
@@ -398,4 +402,4 @@ input:focus{
         justify-content: space-between;    
     }
 
-}
+} */
