--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ input::placeholder{
     }
     .logo{
         margin-top: 7%;
+        margin-top: 5%;
     }
     .wrapper{
         max-width: 60%;
