--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ input::placeholder{
     }
     .logo{
         margin-top: 7%;
-        margin-top: 5%;
+        margin-bottom: 5%;
     }
     .wrapper{
         max-width: 60%;
